--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class ="container">
         <div class="center">
-            <img id ='madi' src="DSC_0649edited.jpg" class="img-medium"/>
+            <img id ='madi' src="http://aditikamboj.imad.hasura-app.io/DSC_0649edited.jpg" class="img-medium"/>
         </div>
         <br>
         <h3>Personal</h3>
