--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,7 @@
         <div>I study at YMCAUST</div>
         <hr/>
         <div class="footer">
+            This button <button id="counter">click me!</button>has been clicked <span id ="count">0</span>times.
             
         </div>
         </div>
